fix: move link dropdown over so it doesn't overflow the left

--- a/dt-assets/scss/_details.scss
+++ b/dt-assets/scss/_details.scss
@@ -740,7 +740,7 @@ select.color-select {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   border: solid 1px #cacaca;
   z-index: 1;
-  transform: translateX(-70%);
+  transform: translateX(-15%);
 }
 
 .add-link-dropdown:hover .add-link-dropdown__content {
